assets/css/style.css
/* Google fonts import */
@import url('https://fonts.googleapis.com/css2?family=Nunito+Sans:opsz,wght@6..12,300&family=Protest+Riot&display=swap');

/* Asterisk wildcard selector to override default browser styles */
* {
    padding: 0;
    margin: 0;
    box-sizing: border-box;
}  

/* General styles */
body {
    min-height: 100vh;
    max-width: 100%;
    overflow-x: hidden;
    display: flex;
    flex-direction: column;
    color: #0d0c0c;
    font-family: 'Nunito Sans', sans-serif;
}

/*  Header */
header {
    background-color: #ffffff;
    padding: 5px 10px;    
    display: flex;
    justify-content: space-between;
    align-items: flex-end;
    position: fixed;
    z-index: 99;
    width: 100%;

} 
h1, h2, h3 {
    font-family: 'Protest Riot', sans-serif;
}

header a {
    text-decoration: none;
    color: #0d0c0c;
 }

#menu {
    font-size: 105%;
    display: block;
    padding-left: 1em;
}

 nav a {
    /* letter-spacing: 1px; */
    text-decoration: none;
    color: #0d0c0c;
}

nav li {
    margin-bottom: 3%;
   /* margin-left: 1em; */
    list-style-type: none;
}

.active {
    border-bottom: 1px solid #51504f;
}

/* I followed the nav bar toggle code structure from Love Running project for this section */
/* Navbar styles with dropdown toggle */
nav {
    position: absolute;
    background-color: #ffffff;
    width: 100%;
    left: 0;
    padding: 0 1rem;
    box-shadow: 0 2px 2px #51504f;
    display: none;
    top: 100%;
}

/* Nav toggle */
#nav-toggle:checked~nav {
    display: block;
}

#nav-toggle {
    display: none;
}

.nav-toggle-label {
    font-size: 2rem;
}

/* Main content */
main {
    background-color: #ffffff;
    /* Make main element push footer down */
    flex: 1 0 auto;
    /* Add margin at the top to prevent content from being covered by the header */
    margin-top: 52px;
}


#intro {
    display: flex;
    flex-direction: column;
    background-color: #65cbfc;
}

#book-club-image {
    width: 100%;
}

#welcome {
    margin: 2rem;
    text-align: center;
    font-size: 80%;
    line-height: 200%;
    display: flex;
    justify-content: center;
    align-items: center;
}



/* About Us */
/*
#mission {
    background-color: #bcbcbd;
    padding: 1rem;
    font-size: 90%;
}

#mission hr {
    color: #51504f
}
*/

#about-us {
    background-color: #ffffff;
    font-size: 0.9em;
    padding: 20px;
    line-height: 150%;
    text-align: justify;
}


/* Current Reading Page */

#new-book {
    display: flex;
    flex-direction: column;
    /* justify-content: space-around; */
    /* flex-wrap: wrap; */
    /* overflow: auto; */
}

.book-cover {
    margin: 60px 120px 20px 60px;
}
.book-cover img {
    /* margin: 60px; */
    /* border: 50px; */
    box-shadow: 3px 3px 3px #51504f;
    border: 1px solid #4488ac;
    width: 100%;
    height: 100%;
    /* position: relative; */
}
.book-info {
    font-size: 0.8em;
    padding: 1rem 3rem;
    text-align: justify;
}

#questions {
    padding: 30px 30px 30px 50px;
    font-size: 0.9em;
    background-color: #ffffff;
}

#questions h2 {
    margin-bottom: 6px;
} 
#questions li {
    margin-bottom: 3px;
}


/* Footer */
footer {
    background-color: #65cbfc;
}

#social-networks {
    text-align: center;
    padding: 15px 0;
    display: flex;
    justify-content: space-evenly;
    list-style-type: none;
}

#social-networks i {
    font-size: 130%;
    color: #51504f;
}

/* Media query: tablets and larger (768px and up) */
@media screen and (min-width: 768px) {

     /* Header */
    nav {
        display: block;
        position: relative;
        box-shadow: none;
        width: fit-content;
        padding-right: 1rem;
    }

    #menu {
        display: flex;
    }

    #menu>li {
        padding-left: 1rem;

    }

    .nav-toggle-label {
         display: none;
    }

    #logo {
        font-size: 120%;
        line-height: 75px;
        margin: 0 1rem;
    }

    main {
       /* Add margin at the top to prevent content from being covered by the header */
        margin-top: 84px;
    }

    /* Inrtoduction */
   
    #intro {
        flex-direction: row;
    }

    #book-club-image {
        width: 60%;
    }
    
    #welcome {
        font-size: 1.1em;
        width: 40%;
    }

    #about-us {
        font-size: 1em;
        padding: 40px;
    }
    #new-book {
        flex-direction: row;
        justify-content: space-around;
    }
    .book-info {
        font-size: 0.9rem;
        width: 60%;
        display: flex;
        justify-content: center;
        align-items: center;
    }
    #questions {
        font-size: 1rem;
    }
    #questions li {
        margin-bottom: 5px;
    }
}

/* Large devices (laptops and desktops, 992px and up) */
@media screen and (min-width: 992px) {
    #menu a:hover {
        border-bottom: 1px solid #51504f;
    }
}

